Minor wording tweaks

--- a/latex/siggraph2013/introduction.tex
+++ b/latex/siggraph2013/introduction.tex
@@ -13,10 +13,10 @@ While many people can easily distinguish patterns that they like from those they
 
 %% Goals - criteria for a computational tool
 % Should fit into existing practices (allow them to EXPLORE, and allow them to use examples as inspiration)
-Despite these challenges, few computational tools exist for assisting with the pattern coloring process. Can computation make this process easier for artists of all levels by automatically suggesting colorings? To be an effective creative support tool, a coloring suggestion system should adapt its suggestions for different usage scenarios. First, it should output diverse suggestions automatically for uncertain users who want to explore the space of good colorings. Second, the system should accomodate users with different aesthetic preferences by customizing suggestions to evoke a particular desired style. Finally, it should expose controls to let users refine their criteria and guide the suggestion process. 
+Despite these challenges, few computational tools exist for assisting with the pattern coloring process. Can computation make this process easier for artists of all levels by automatically suggesting colorings? To be an effective creative support tool, a coloring suggestion system should adapt to different usage scenarios. First, it should output diverse suggestions automatically for uncertain users who want to explore the space of good colorings. Second, the system should accomodate users with different aesthetic preferences by customizing suggestions to evoke a particular desired style. Finally, it should expose controls to let users refine their criteria and guide the suggestion process. 
 
 %% Challenges
-Building such a system is difficult, as it requires a computational encoding of the properties that make a coloring desirable. There are many principles of aesthetics that might be relevant, such as any of the myriad of different color harmony rules~\cite{ColorHarmonyBook} or principles of art such as contrast and dominance~\cite{ArtPrinciples}. But which of these principles apply to which patterns and which coloring styles? For those that do apply, which are the most important? Even assuming an answer to these questions, there is still the problem of how to actually \emph{generate} many, diverse new colorings that satisfy the desired properties.
+Building such a system is difficult, as it requires a computational encoding of the properties that make a coloring desirable. There are many principles of aesthetics that might be relevant, such as any of the many different color harmony rules~\cite{ColorHarmonyBook} or principles of art such as contrast and dominance~\cite{ArtPrinciples}. But which of these principles apply to which patterns and which coloring styles? For those that do apply, which are the most important? Even assuming an answer to these questions, there is still the problem of how to actually \emph{generate} many, diverse new colorings that satisfy the desired properties.
 
 %% Our approach
 In this paper, we present a probabilistic approach to automatic pattern colorization. Our main contribution is a probabilistic factor graph model that can be trained on example patterns and sampled to generate new colorings for a target pattern template. The general-purpose factor graph framework allows us to incorporate terms in our model both for color compatibility and spatial consistency. The individual terms, as well as the relative importance of each term, are automatically trained using machine learning techniques, statistically capturing the desirable properties of the example patterns. By combining Markov Chain Monte Carlo sampling with sample-diversification techniques commonly used for information retrieval, our model can generate a wide variety of attractive colorings. And, via the use of conditional probabilistic inference or the addition of simple constraint factors, users can exercise a high degree of control over the generated suggestions.
