Better color compatibility figure.

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -19,8 +19,20 @@ To generate attractive pattern colorings, a reasonable first step is to enforce 
 
 \begin{figure}[htb]
 \centering
-\includegraphics[width=\columnwidth]{figs/colorCompatOnly.png}
-\caption{Patterns whose colors receive high scores under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. Many patterns exhibit problems such as adjacent equi-luminant regions and excessively saturated backgrounds~\remark{Figure not final.}}
+%\includegraphics[width=\columnwidth]{figs/colorCompatOnly.png}
+\begin{tabular}{cccc}
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_0_0_3-75}&
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_0_1_3-32}&
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_0_2_3-67}&
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_0_3_3-70}\\
+3.75&3.32&3.67&3.70\vspace{0.5em}\\
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_1_0_3-74}&
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_1_1_3-42}&
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_1_2_3-66}&
+\includegraphics[width=.2\columnwidth]{figs/colorCompat/r_1_3_3-39}\\
+3.74&3.42&3.66&3.39\\
+\end{tabular}
+\caption{Patterns whose colors receive high scores under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. The score assigned by the O'Donovan model is shown beneath each pattern, with a typical pattern receiving a score between 3 and 4. Many results exhibit problems such as adjacent equi-luminant regions and excessively saturated backgrounds.}
 \label{fig:ColorCompatOnly}
 \end{figure}
 \remark{S:I'm stumped...Not sure why, but my Latex breaks with the caption there..but TexWorks works ok}
