--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -32,12 +32,12 @@
 \newcommand{\groupTermWeight}{\mathbf{w}^{\textrm{Grp}}_\pi}
 \newcommand{\segTermWeight}{\mathbf{w}^{\textrm{Seg}}_\pi}
 \newcommand{\adjTermWeight}{\mathbf{w}^{\textrm{Adj}}_\pi}
-\newcommand{\colorCompatWeight}{\mathbf{w}^{\textrm{ColorCompat}}_\pi}
+\newcommand{\colorCompatWeight}{\mathbf{w}^{\textrm{Compat}}}
 
-\newcommand{\colorCompatTerm}{\Phi^{\textrm{ColorCompat}}}
+\newcommand{\colorCompatTerm}{\Phi^{\textrm{Compat}}}
 \newcommand{\factor}{\mathcal{F}}
-\newcommand{\segprime}{\segment^{\prime}}
-\newcommand{\groupprime}{\group^{\prime}}
+\newcommand{\segprime}{{\segment^{\prime}}}
+\newcommand{\groupprime}{{\group^{\prime}}}
 
 \newcommand{\propName}[1]{\text{\emph{#1}}}
 
