note about the confusion matrix visualization.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -68,7 +68,7 @@ Style&Example&Results\\ %\hline
 \raisebox{1.55em}{\emph{Mellow}}&\includegraphics[width=.148\columnwidth]{figs/styleResultsMellowExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsMellow}\vspace{0.5em}\\
 \end{tabular}
 
-\caption{In this example, 17 patterns were chosen in three different styles, and a representative image from each style is shown in the second column. A separate model was then trained on each style, and in the third column we show four samples drawn from each model. In each case, our model is able to learn different properties of the desired distribution over colors.}
+\caption{In this example, 17 patterns were chosen in three different styles, and a representative image from each style is shown in the second column. A separate model was then trained on each style, and in the third column we show four samples drawn from each model. In each case, our model is able to learn different properties of the desired distribution over colors.~\remark{Confusion matrix/matrices?}}
 \label{fig:styleTraining}
 \vspace{-1.0em}
 \end{figure}
