--- a/latex/siggraph2013/model.tex
+++ b/latex/siggraph2013/model.tex
@@ -47,7 +47,7 @@ Ideally, we'd like to set the weights such that the resulting model is highly li
 		- \ln{Z_\pattern(\weights)}
 \end{equation*}
 %%
-Convex log-likelihoods such as this one are typically maximized via gradient ascent. The partial derivatives of this function with respect to the weights are given by
+whre $\dataset$ is the dataset of example pattern colorings. Convex log-likelihoods such as this one are typically maximized via gradient ascent. The partial derivatives of this function with respect to the weights are given by
 %% Partial derivatives
 \begin{equation*}
 \frac{\partial}{\partial \weights_\term} \ell(\weights : \dataset) = 
